<resources>
    <string name="app_name">Settings-Playground</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_otp">get OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_this">verify this</string>
    <string name="otp_service">OTP Service</string>
    <string name="start_timer">Start Timer</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="reset_timer">reset timer</string>
    <string name="stop_timer">Stop Timer</string>
    <string name="timer">timer</string>
    <string name="schedule_notification">schedule notification</string>
    <string name="message">message</string>
    <string name="title">title</string>
    <string name="live_data">live data</string>
    <string name="state_flow">state flow</string>
    <string name="flow">flow</string>
    <string name="shared_flow">shared flow</string>
    <string name="hello_there">hello there</string>
    <string name="news_flows">news Flows</string>
    <string name="maps">maps</string>
    <string name="download_notification">download Notification</string>
    <string name="title_activity_jet_pack">JetPAckActivity</string>
    <string name="content_provider">Content Provider\n</string>
    <string name="gotosecond">go to second act.\n</string>
    <string name="configuration">Configuration</string>
</resources>