<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_main"
    tools:context="ui.fragments.MainFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fragment_main_bt_otp_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otp_service"
        android:layout_margin="@dimen/_20sdp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fragment_main_bt_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_timer"
        android:layout_margin="@dimen/_20sdp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fragment_main_bt_schedule_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule_notification"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_margin="@dimen/_20sdp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fragment_flows_bt_flow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_flows"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_margin="@dimen/_20sdp"/>

</GridLayout>