<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_timer"
    tools:context=".ui.fragments.TimerFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_timer_tv_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_00_00_00"
        android:textSize="@dimen/_30sdp"
        android:textStyle="bold"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_margin="@dimen/_30sdp"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/_30sdp"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_timer_bt_start"
        android:layout_width="wrap_content"
        android:layout_row="1"
        android:layout_gravity="center_horizontal"
        android:layout_column="0"
        android:text="@string/start_timer"
        android:layout_height="wrap_content"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_timer_bt_reset"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:text="@string/reset_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</GridLayout>