<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_o_t_p_service"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.OTPServiceFragment">

    <ViewSwitcher
        android:id="@+id/fragment_o_t_p_service_vs"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_o_t_p_service_bt_get_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/get_otp" />

        <LinearLayout
            android:id="@+id/fragment_o_t_p_service_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_o_t_p_service_et_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/enter_otp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragment_o_t_p_service_bt_verify_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/verify_this" />
        </LinearLayout>
    </ViewSwitcher>
</FrameLayout>